force-app/main/default/objects/Position__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describe in detail about this Position. Like the work that has been done, location etc. or anything that will be helpful and relevant.</description>
    <inlineHelpText>Describe in detail about this Position. Like the work that has been done, location etc. or anything that will be helpful and relevant.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>