force-app/main/default/objects/Position__c/fields/RolesAndResponsibility__c.field-meta.xml
<CustomField>
    <fullName>RolesAndResponsibility__c</fullName>
    <inlineHelpText>Enter the Roles and Responsibilities related to the above position. Make dot points if possible and elaborate the details.</inlineHelpText>
    <label>Roles And Responsibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>